@@ -65,7 +65,7 @@ class TopicControllerTest {
     TopicController topicController;
 
     @Test
-    void listEmptyTopics() {
+    void shouldListTopicsWhenEmpty() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -73,14 +73,16 @@ class TopicControllerTest {
                 .build())
             .build();
 
-        when(namespaceService.findByName("test")).thenReturn(Optional.of(ns));
-        when(topicService.findByWildcardName(ns, "*")).thenReturn(List.of());
+        when(namespaceService.findByName("test"))
+            .thenReturn(Optional.of(ns));
+        when(topicService.findByWildcardName(ns, "*"))
+            .thenReturn(List.of());
 
         assertEquals(List.of(), topicController.list("test", "*"));
     }
 
     @Test
-    void listTopicWithoutParameter() {
+    void shouldListTopicsWithWildcardParameter() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -88,17 +90,28 @@ class TopicControllerTest {
                 .build())
             .build();
 
-        Topic topic1 = Topic.builder().metadata(Metadata.builder().name("topic1").build()).build();
-        Topic topic2 = Topic.builder().metadata(Metadata.builder().name("topic2").build()).build();
+        Topic topic1 = Topic.builder()
+            .metadata(Metadata.builder()
+                .name("topic1")
+                .build())
+            .build();
 
-        when(namespaceService.findByName("test")).thenReturn(Optional.of(ns));
-        when(topicService.findByWildcardName(ns, "*")).thenReturn(List.of(topic1, topic2));
+        Topic topic2 = Topic.builder()
+            .metadata(Metadata.builder()
+                .name("topic2")
+                .build())
+            .build();
+
+        when(namespaceService.findByName("test"))
+            .thenReturn(Optional.of(ns));
+        when(topicService.findByWildcardName(ns, "*"))
+            .thenReturn(List.of(topic1, topic2));
 
         assertEquals(List.of(topic1, topic2), topicController.list("test", "*"));
     }
 
     @Test
-    void listTopicWithNameParameter() {
+    void shouldListTopicWithNoWildcardParameter() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -106,17 +119,23 @@ class TopicControllerTest {
                 .build())
             .build();
 
-        Topic topic1 = Topic.builder().metadata(Metadata.builder().name("topic1").build()).build();
+        Topic topic1 = Topic.builder()
+            .metadata(Metadata.builder()
+                .name("topic1")
+                .build())
+            .build();
 
-        when(namespaceService.findByName("test")).thenReturn(Optional.of(ns));
-        when(topicService.findByWildcardName(ns, "topic1")).thenReturn(List.of(topic1));
+        when(namespaceService.findByName("test"))
+            .thenReturn(Optional.of(ns));
+        when(topicService.findByWildcardName(ns, "topic1"))
+            .thenReturn(List.of(topic1));
 
         assertEquals(List.of(topic1), topicController.list("test", "topic1"));
     }
 
     @Test
     @SuppressWarnings("deprecation")
-    void getEmptyTopic() {
+    void shouldGetTopicWhenEmpty() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -129,14 +148,14 @@ class TopicControllerTest {
         when(topicService.findByName(ns, "topic.notfound"))
             .thenReturn(Optional.empty());
 
-        Optional<Topic> actual = topicController.getTopic("test", "topic.notfound");
+        Optional<Topic> actual = topicController.get("test", "topic.notfound");
 
         assertTrue(actual.isEmpty());
     }
 
     @Test
     @SuppressWarnings("deprecation")
-    void getTopic() {
+    void shouldGetTopic() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -151,14 +170,14 @@ class TopicControllerTest {
                 Topic.builder().metadata(Metadata.builder().name("topic.found").build()).build()
             ));
 
-        Optional<Topic> actual = topicController.getTopic("test", "topic.found");
+        Optional<Topic> actual = topicController.get("test", "topic.found");
 
         assertTrue(actual.isPresent());
         assertEquals("topic.found", actual.get().getMetadata().getName());
     }
 
     @Test
-    void deleteTopic() throws InterruptedException, ExecutionException, TimeoutException {
+    void shouldDeleteTopic() throws InterruptedException, ExecutionException, TimeoutException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -179,13 +198,13 @@ class TopicControllerTest {
         doNothing().when(topicService).delete(toDelete.get());
         doNothing().when(applicationEventPublisher).publishEvent(any());
 
-        HttpResponse<Void> actual = topicController.deleteTopic("test", "topic.delete", false);
+        HttpResponse<Void> actual = topicController.delete("test", "topic.delete", false);
 
         assertEquals(HttpStatus.NO_CONTENT, actual.getStatus());
     }
 
     @Test
-    void deleteTopicDryRun() throws InterruptedException, ExecutionException, TimeoutException {
+    void shouldDeleteTopicInDryRunMode() throws InterruptedException, ExecutionException, TimeoutException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -195,20 +214,26 @@ class TopicControllerTest {
 
         when(namespaceService.findByName("test"))
             .thenReturn(Optional.of(ns));
+
         Optional<Topic> toDelete = Optional.of(
-            Topic.builder().metadata(Metadata.builder().name("topic.delete").build()).build());
+            Topic.builder()
+                .metadata(Metadata.builder()
+                    .name("topic.delete")
+                    .build())
+                .build());
+
         when(topicService.findByName(ns, "topic.delete"))
             .thenReturn(toDelete);
         when(topicService.isNamespaceOwnerOfTopic("test", "topic.delete"))
             .thenReturn(true);
 
-        topicController.deleteTopic("test", "topic.delete", true);
+        topicController.delete("test", "topic.delete", true);
 
         verify(topicService, never()).delete(any());
     }
 
     @Test
-    void deleteTopicUnauthorized() {
+    void shouldNotDeleteTopicWhenUnauthorized() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -222,11 +247,11 @@ class TopicControllerTest {
             .thenReturn(false);
 
         assertThrows(ResourceValidationException.class,
-            () -> topicController.deleteTopic("test", "topic.delete", false));
+            () -> topicController.delete("test", "topic.delete", false));
     }
 
     @Test
-    void createNewTopic() throws InterruptedException, ExecutionException, TimeoutException {
+    void shouldCreateTopic() throws InterruptedException, ExecutionException, TimeoutException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -252,11 +277,16 @@ class TopicControllerTest {
 
         when(namespaceService.findByName("test"))
             .thenReturn(Optional.of(ns));
-        when(topicService.isNamespaceOwnerOfTopic(any(), any())).thenReturn(true);
-        when(topicService.findByName(ns, "test.topic")).thenReturn(Optional.empty());
-        when(resourceQuotaService.validateTopicQuota(ns, Optional.empty(), topic)).thenReturn(List.of());
-        when(securityService.username()).thenReturn(Optional.of("test-user"));
-        when(securityService.hasRole(ResourceBasedSecurityRule.IS_ADMIN)).thenReturn(false);
+        when(topicService.isNamespaceOwnerOfTopic(any(), any()))
+            .thenReturn(true);
+        when(topicService.findByName(ns, "test.topic"))
+            .thenReturn(Optional.empty());
+        when(resourceQuotaService.validateTopicQuota(ns, Optional.empty(), topic))
+            .thenReturn(List.of());
+        when(securityService.username())
+            .thenReturn(Optional.of("test-user"));
+        when(securityService.hasRole(ResourceBasedSecurityRule.IS_ADMIN))
+            .thenReturn(false);
         doNothing().when(applicationEventPublisher).publishEvent(any());
 
         when(topicService.create(topic)).thenReturn(topic);
@@ -268,7 +298,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void shouldCreateNewTopicWithNoConstraint() throws InterruptedException, ExecutionException, TimeoutException {
+    void shouldCreateTopicWithNoConstraint() throws InterruptedException, ExecutionException, TimeoutException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -295,11 +325,16 @@ class TopicControllerTest {
 
         when(namespaceService.findByName("test"))
             .thenReturn(Optional.of(ns));
-        when(topicService.isNamespaceOwnerOfTopic(any(), any())).thenReturn(true);
-        when(topicService.findByName(ns, "test.topic")).thenReturn(Optional.empty());
-        when(resourceQuotaService.validateTopicQuota(ns, Optional.empty(), topic)).thenReturn(List.of());
-        when(securityService.username()).thenReturn(Optional.of("test-user"));
-        when(securityService.hasRole(ResourceBasedSecurityRule.IS_ADMIN)).thenReturn(false);
+        when(topicService.isNamespaceOwnerOfTopic(any(), any()))
+            .thenReturn(true);
+        when(topicService.findByName(ns, "test.topic"))
+            .thenReturn(Optional.empty());
+        when(resourceQuotaService.validateTopicQuota(ns, Optional.empty(), topic))
+            .thenReturn(List.of());
+        when(securityService.username())
+            .thenReturn(Optional.of("test-user"));
+        when(securityService.hasRole(ResourceBasedSecurityRule.IS_ADMIN))
+            .thenReturn(false);
         doNothing().when(applicationEventPublisher).publishEvent(any());
 
         when(topicService.create(topic)).thenReturn(topic);
@@ -311,7 +346,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void updateTopic() throws InterruptedException, ExecutionException, TimeoutException {
+    void shouldUpdateTopic() throws InterruptedException, ExecutionException, TimeoutException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -350,10 +385,14 @@ class TopicControllerTest {
 
         when(namespaceService.findByName("test"))
             .thenReturn(Optional.of(ns));
-        when(topicService.findByName(ns, "test.topic")).thenReturn(Optional.of(existing));
-        when(topicService.create(topic)).thenReturn(topic);
-        when(securityService.username()).thenReturn(Optional.of("test-user"));
-        when(securityService.hasRole(ResourceBasedSecurityRule.IS_ADMIN)).thenReturn(false);
+        when(topicService.findByName(ns, "test.topic"))
+            .thenReturn(Optional.of(existing));
+        when(topicService.create(topic))
+            .thenReturn(topic);
+        when(securityService.username())
+            .thenReturn(Optional.of("test-user"));
+        when(securityService.hasRole(ResourceBasedSecurityRule.IS_ADMIN))
+            .thenReturn(false);
         doNothing().when(applicationEventPublisher).publishEvent(any());
 
         var response = topicController.apply("test", topic, false);
@@ -404,8 +443,10 @@ class TopicControllerTest {
 
         when(namespaceService.findByName("test"))
             .thenReturn(Optional.of(ns));
-        when(topicService.findByName(ns, "test.topic")).thenReturn(Optional.of(existing));
-        when(topicService.validateTags(ns, topic)).thenReturn(List.of("Error on tags"));
+        when(topicService.findByName(ns, "test.topic"))
+            .thenReturn(Optional.of(existing));
+        when(topicService.validateTags(ns, topic))
+            .thenReturn(List.of("Error on tags"));
 
         ResourceValidationException actual =
             assertThrows(ResourceValidationException.class, () -> topicController.apply("test", topic, false));
@@ -444,7 +485,7 @@ class TopicControllerTest {
                 .name("test.topic")
                 .build())
             .spec(Topic.TopicSpec.builder()
-                .tags(Arrays.asList("TAG1"))
+                .tags(List.of("TAG1"))
                 .replicationFactor(3)
                 .partitions(3)
                 .configs(Map.of("cleanup.policy", "delete",
@@ -455,10 +496,14 @@ class TopicControllerTest {
 
         when(namespaceService.findByName("test"))
             .thenReturn(Optional.of(ns));
-        when(topicService.findByName(ns, "test.topic")).thenReturn(Optional.of(existing));
-        when(topicService.create(topic)).thenReturn(topic);
-        when(securityService.username()).thenReturn(Optional.of("test-user"));
-        when(securityService.hasRole(ResourceBasedSecurityRule.IS_ADMIN)).thenReturn(false);
+        when(topicService.findByName(ns, "test.topic"))
+            .thenReturn(Optional.of(existing));
+        when(topicService.create(topic))
+            .thenReturn(topic);
+        when(securityService.username())
+            .thenReturn(Optional.of("test-user"));
+        when(securityService.hasRole(ResourceBasedSecurityRule.IS_ADMIN))
+            .thenReturn(false);
         doNothing().when(applicationEventPublisher).publishEvent(any());
 
         var response = topicController.apply("test", topic, false);
@@ -469,11 +514,8 @@ class TopicControllerTest {
         assertEquals("TAG1", actual.getSpec().getTags().getFirst());
     }
 
-    /**
-     * Validate topic update when there are validations errors.
-     */
     @Test
-    void updateTopicValidationErrors() {
+    void shouldNotUpdateTopicWhenValidationErrors() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -524,7 +566,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void updateTopicAlreadyExistsUnchanged() throws InterruptedException, ExecutionException, TimeoutException {
+    void shouldNotUpdateTopicWhenUnchanged() throws InterruptedException, ExecutionException, TimeoutException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -565,7 +607,8 @@ class TopicControllerTest {
 
         when(namespaceService.findByName("test"))
             .thenReturn(Optional.of(ns));
-        when(topicService.findByName(ns, "test.topic")).thenReturn(Optional.of(existing));
+        when(topicService.findByName(ns, "test.topic"))
+            .thenReturn(Optional.of(existing));
 
         var response = topicController.apply("test", topic, false);
         Topic actual = response.body();
@@ -575,7 +618,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void createNewTopicDryRun() throws InterruptedException, ExecutionException, TimeoutException {
+    void shouldCreateTopicInDryRunMode() throws InterruptedException, ExecutionException, TimeoutException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -601,9 +644,12 @@ class TopicControllerTest {
 
         when(namespaceService.findByName("test"))
             .thenReturn(Optional.of(ns));
-        when(topicService.isNamespaceOwnerOfTopic(any(), any())).thenReturn(true);
-        when(topicService.findByName(ns, "test.topic")).thenReturn(Optional.empty());
-        when(resourceQuotaService.validateTopicQuota(ns, Optional.empty(), topic)).thenReturn(List.of());
+        when(topicService.isNamespaceOwnerOfTopic(any(), any()))
+            .thenReturn(true);
+        when(topicService.findByName(ns, "test.topic"))
+            .thenReturn(Optional.empty());
+        when(resourceQuotaService.validateTopicQuota(ns, Optional.empty(), topic))
+            .thenReturn(List.of());
 
         var response = topicController.apply("test", topic, true);
         assertEquals("created", response.header("X-Ns4kafka-Result"));
@@ -611,7 +657,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void createNewTopicFailValidation() {
+    void shouldNotCreateTopicWhenValidationErrors() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -635,8 +681,10 @@ class TopicControllerTest {
 
         when(namespaceService.findByName("test"))
             .thenReturn(Optional.of(ns));
-        when(topicService.isNamespaceOwnerOfTopic(any(), any())).thenReturn(true);
-        when(topicService.findByName(ns, "test.topic")).thenReturn(Optional.empty());
+        when(topicService.isNamespaceOwnerOfTopic(any(), any()))
+            .thenReturn(true);
+        when(topicService.findByName(ns, "test.topic"))
+            .thenReturn(Optional.empty());
 
         ResourceValidationException actual = assertThrows(ResourceValidationException.class,
             () -> topicController.apply("test", topic, false));
@@ -645,7 +693,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void shouldNotFailWhenCreatingNewTopicWithNoValidator()
+    void shouldNotFailWhenCreatingTopicWithNoValidator()
         throws ExecutionException, InterruptedException, TimeoutException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
@@ -658,7 +706,9 @@ class TopicControllerTest {
             .build();
 
         Topic topic = Topic.builder()
-            .metadata(Metadata.builder().name("test.topic").build())
+            .metadata(Metadata.builder()
+                .name("test.topic")
+                .build())
             .spec(Topic.TopicSpec.builder()
                 .replicationFactor(1)
                 .partitions(3)
@@ -670,8 +720,10 @@ class TopicControllerTest {
 
         when(namespaceService.findByName("test"))
             .thenReturn(Optional.of(ns));
-        when(topicService.isNamespaceOwnerOfTopic(any(), any())).thenReturn(true);
-        when(topicService.findByName(ns, "test.topic")).thenReturn(Optional.empty());
+        when(topicService.isNamespaceOwnerOfTopic(any(), any()))
+            .thenReturn(true);
+        when(topicService.findByName(ns, "test.topic"))
+            .thenReturn(Optional.empty());
 
         var response = topicController.apply("test", topic, true);
         assertEquals("created", response.header("X-Ns4kafka-Result"));
@@ -679,7 +731,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void shouldNotFailWhenCreatingNewTopicWithNoValidationConstraint()
+    void shouldNotFailWhenCreatingTopicWithNoValidationConstraint()
         throws ExecutionException, InterruptedException, TimeoutException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
@@ -693,7 +745,9 @@ class TopicControllerTest {
             .build();
 
         Topic topic = Topic.builder()
-            .metadata(Metadata.builder().name("test.topic").build())
+            .metadata(Metadata.builder()
+                .name("test.topic")
+                .build())
             .spec(Topic.TopicSpec.builder()
                 .replicationFactor(1)
                 .partitions(3)
@@ -705,8 +759,10 @@ class TopicControllerTest {
 
         when(namespaceService.findByName("test"))
             .thenReturn(Optional.of(ns));
-        when(topicService.isNamespaceOwnerOfTopic(any(), any())).thenReturn(true);
-        when(topicService.findByName(ns, "test.topic")).thenReturn(Optional.empty());
+        when(topicService.isNamespaceOwnerOfTopic(any(), any()))
+            .thenReturn(true);
+        when(topicService.findByName(ns, "test.topic"))
+            .thenReturn(Optional.empty());
 
         var response = topicController.apply("test", topic, true);
         assertEquals("created", response.header("X-Ns4kafka-Result"));
@@ -714,7 +770,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void createNewTopicFailQuotaValidation() {
+    void shouldNotCreateTopicWhenQuotaValidationErrors() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -724,6 +780,7 @@ class TopicControllerTest {
                 .topicValidator(TopicValidator.makeDefault())
                 .build())
             .build();
+
         Topic topic = Topic.builder()
             .metadata(Metadata.builder()
                 .name("test.topic")
@@ -739,9 +796,12 @@ class TopicControllerTest {
 
         when(namespaceService.findByName("test"))
             .thenReturn(Optional.of(ns));
-        when(topicService.isNamespaceOwnerOfTopic(any(), any())).thenReturn(true);
-        when(topicService.findByName(ns, "test.topic")).thenReturn(Optional.empty());
-        when(resourceQuotaService.validateTopicQuota(ns, Optional.empty(), topic)).thenReturn(List.of("Quota error"));
+        when(topicService.isNamespaceOwnerOfTopic(any(), any()))
+            .thenReturn(true);
+        when(topicService.findByName(ns, "test.topic"))
+            .thenReturn(Optional.empty());
+        when(resourceQuotaService.validateTopicQuota(ns, Optional.empty(), topic))
+            .thenReturn(List.of("Quota error"));
 
         ResourceValidationException actual = assertThrows(ResourceValidationException.class,
             () -> topicController.apply("test", topic, false));
@@ -750,7 +810,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void importTopic() throws InterruptedException, ExecutionException, TimeoutException {
+    void shouldImportTopic() throws InterruptedException, ExecutionException, TimeoutException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -818,7 +878,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void importTopicDryRun() throws InterruptedException, ExecutionException, TimeoutException {
+    void shouldImportTopicInDryRunMode() throws InterruptedException, ExecutionException, TimeoutException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -883,7 +943,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void deleteRecordsSuccess() throws ExecutionException, InterruptedException {
+    void shouldDeleteRecords() throws ExecutionException, InterruptedException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -891,7 +951,11 @@ class TopicControllerTest {
                 .build())
             .build();
 
-        Topic toEmpty = Topic.builder().metadata(Metadata.builder().name("topic.empty").build()).build();
+        Topic toEmpty = Topic.builder()
+            .metadata(Metadata.builder()
+                .name("topic.empty")
+                .build())
+            .build();
 
         Map<TopicPartition, Long> partitionsToDelete = Map.of(
             new TopicPartition("topic.empty", 0), 100L,
@@ -938,7 +1002,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void deleteRecordsCompactedTopic() {
+    void shouldDeleteRecordsInCompactedTopic() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -966,7 +1030,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void deleteRecordsDryRun() throws InterruptedException, ExecutionException {
+    void shouldDeleteRecordsInDryRunMode() throws InterruptedException, ExecutionException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -1021,7 +1085,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void deleteRecordsNotOwner() {
+    void shouldNotDeleteRecordsWhenNotOwner() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -1044,7 +1108,7 @@ class TopicControllerTest {
     }
 
     @Test
-    void deleteRecordsNotExistingTopic() {
+    void shouldNotDeleteRecordsWhenTopicNotExist() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -1068,7 +1132,9 @@ class TopicControllerTest {
     }
 
     @Test
-    void createCollidingTopic() throws InterruptedException, ExecutionException, TimeoutException {
+    void shouldNotCreateTopicWhenNameCollidesOnSpecialChar() throws InterruptedException,
+                                                                    ExecutionException,
+                                                                    TimeoutException {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("test")
@@ -1078,6 +1144,7 @@ class TopicControllerTest {
                 .topicValidator(TopicValidator.makeDefault())
                 .build())
             .build();
+
         Topic topic = Topic.builder()
             .metadata(Metadata.builder()
                 .name("test.topic")
@@ -1093,9 +1160,12 @@ class TopicControllerTest {
 
         when(namespaceService.findByName("test"))
             .thenReturn(Optional.of(ns));
-        when(topicService.isNamespaceOwnerOfTopic(any(), any())).thenReturn(true);
-        when(topicService.findByName(ns, "test.topic")).thenReturn(Optional.empty());
-        when(topicService.findCollidingTopics(ns, topic)).thenReturn(List.of("test_topic"));
+        when(topicService.isNamespaceOwnerOfTopic(any(), any()))
+            .thenReturn(true);
+        when(topicService.findByName(ns, "test.topic"))
+            .thenReturn(Optional.empty());
+        when(topicService.findCollidingTopics(ns, topic))
+            .thenReturn(List.of("test_topic"));
 
         ResourceValidationException actual =
             assertThrows(ResourceValidationException.class, () -> topicController.apply("test", topic, false));
